--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=42",
     "wheel",
-	'numpy>=1.16",
+	"numpy>=1.16",
 	"datetime",
 	"tabulate>=0.8",
 	"VUnits>=0.0.3",
@@ -10,7 +10,7 @@ requires = [
 	"pandas>=0.25",
 	"xlrd",
 	"openpyxl>=3.0.0",
-	"seaborn>='0.9.0",
+	"seaborn>=0.9.0",
 	"matplotlib>=3.1",
 ]
 build-backend = "setuptools.build_meta"
